Fixed visible warning in input.

--- a/client/src/components/ui/inputs/RootInput/styles.module.scss
+++ b/client/src/components/ui/inputs/RootInput/styles.module.scss
@@ -177,7 +177,7 @@
 		height: 28rem;
 		position: absolute;
 		right: 15rem;
-		top: 35rem;
+		top: 40rem;
 	}
 
 	p {
